--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,26 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle Navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">5th Street Carts</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar=collapse-1">
+      <ul class="nav navbar-nav">
+        <li style="text-align: right;">{{#link-to 'new'}}Add New Cart{{/link-to}}</li>
+        <li style="text-align: right;">{{#link-to 'about'}}About{{/link-to}}</li>
 
-{{outlet}}
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<div class="container">
+  {{outlet}}
+
+</div>
